fix alignment

--- a/_styl/pages/work.styl
+++ b/_styl/pages/work.styl
@@ -54,7 +54,7 @@
       grid-template-rows: auto
       grid-gap: 10px
       grid-template-areas: "image image" "title icon" "desc ."
-      align-items: center
+      align-content: start
 
       .project-image
         grid-area: image
@@ -64,28 +64,6 @@
         grid-area: icon
       p
         grid-area: desc
-
-  // .jump-links
-  //   padding: 10px 0
-  //   position: sticky
-  //   top: 0
-  //   background-color: var(--background, $white)
-  //   color: var(--text-color, $grey-drk)
-  //   border-bottom: 1px solid $grey-drk
-  //   box-shadow: 0 3px 0 black(.1)
-  //   font-size: .9em
-  //   z-index: 100
-
-  //   a
-  //     background-image: none
-
-  //   ol
-  //     display: inline-block
-
-  //   li
-  //     display: inline
-  //     &:not(:first-of-type):before
-  //       content: ' / '
 
 .art
 
